# legal-agent

./: .env.example  .gitattributes  .gitignore  README.md  app.py  build_db.py  pyproject.toml  requirements.txt  start_server.py
data/case/: cases.txt
data/law/: labor_contract_law.txt  labor_law.txt
data/raw/: 劳动法.docx  劳动法经典案例.docx
docs/: API.md  ARCHITECTURE.md  DEMO_SCRIPT.md  GITHUB_CHECKLIST.md
docs/evaluation/: RAG检索测试用例（30组）.docx  README.md  merge_docx_evaluation_results.py  run_docx_evaluation.py  七、文书生成测试（DocAgent）.docx  九、对比实验测试（核心验证模块）.docx  五、风险评估测试（RiskAgent）.docx  六、案件预判测试（JudgeAgent）.docx  劳动法智能问答系统测试用例集.docx  劳法智枢全模块测试综合分析报告.docx  四、多轮记忆测试（MemorySaver）.docx  测试评测结果.md  赔偿计算引擎测试及统计.docx
docs/evaluation/current_results/: final_docx_evaluation_results.csv  final_docx_evaluation_results.json  final_docx_evaluation_results.md
docs/project/: 项目技术文档.md
frontend/: index.html
legal_ai_agent/: __init__.py
legal_ai_agent/agents/: doc_agent.py  judge_agent.py  qa_agent.py  risk_agent.py  router_agent.py
legal_ai_agent/api/: server.py
legal_ai_agent/config/: settings.py
legal_ai_agent/llm/: qwen_llm.py
legal_ai_agent/memory/: case_profile.py  memory_manager.py
legal_ai_agent/prompts/: qa_prompt.py
legal_ai_agent/rag/: build_db.py  retriever.py  vector_store.py
legal_ai_agent/tools/: calculator.py  labor_tools.py  legal_reasoning.py
scripts/: README.md
tests/: test_calculation_docx_cases.py  test_conversation_state.py  test_multiturn_workflow.py  test_smoke.py
